# dodyndns

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  flake.nix  k8s.yaml  payload.json  sample.envrc  updater.sh
src/: main.rs
