[package]
name = "dodyndns"
version = "0.1.0"
authors = ["Miroslav Zoricak <miroslav.zoricak@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.4"
hyper-tls = "0.5.0"
log = "0.4"
pretty_env_logger = "0.5"
biscuit = "0.6.0"
